KEYCLOAK-4315 Remove some dead/duplicate classes