@@ -32,6 +32,7 @@
 
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
+        <skip.security-manager.tests>true</skip.security-manager.tests>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     </properties>
     <dependencies>
@@ -56,7 +57,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -87,6 +87,35 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>without-security-manager</id>
+                        <goals><goal>test</goal></goals>
+                        <configuration></configuration>
+                    </execution>
+                    <execution>
+                        <id>with-security-manager-all-permissions</id>
+                        <goals><goal>test</goal></goals>
+                        <configuration>
+                            <argLine>-Dmaven.basedir=${basedir} -Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/all-permissions.policy</argLine>
+                            <test>SecurityActionsTest</test>
+                            <skip>${skip.security-manager.tests}</skip>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>with-security-manager-named-permissions</id>
+                        <goals><goal>test</goal></goals>
+                        <configuration>
+                            <argLine>-Djava.security.debug=access -Dmaven.basedir=${basedir} -Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/named-permissions.policy</argLine>
+                            <test>SecurityActionsTest</test>
+                            <skip>${skip.security-manager.tests}</skip>
+                        </configuration>                        
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
